# quadcopter

./: .gitignore  .gitmodules  README.md  plant_step.m  quad_constants.mat  quadcopter.code-workspace
.github/workflows/: flight-controller-build.yml
base_station/: base_station.py  camera.py  controller.py  gui.py  heartbeat.py  log.py  logger.py  protocol.py  radio.py  radio_command.py  requirements.txt  scope.py  telemetry.py  udp.py  video.py  worker.py  xbox.py
base_station/scope-configs/: quadcopter_udp_attitude.json  quadcopter_udp_pid.json  quadcopter_udp_rate.json  (+1 more)
data_model/: converter.py  data_model.json  protocol.md
env/: env.sh  setup.sh
hardware/: fp-lib-table  quadcopter-cache.lib  quadcopter.bak  quadcopter.kicad_pcb  quadcopter.kicad_pcb-bak  quadcopter.lib  quadcopter.net  quadcopter.pro  quadcopter.sch
matlab/: MadgwickAHRS.m  ahrs.m  attitude_controller.m  closed_loop.m  closed_loop_attitude.m  marg.m  mixer.m  motors_model.m  open_loop.m  pid.m  plant_step.m  plant_step_2.m  position_controller.m  rotation.m  visualize.m  visualize_2D.m  visualize_3D.m
meca/sizing/: sizing.xlsx
scope_configs/: scope_udp_attitude.json  scope_udp_attitude_control.json  scope_udp_commands.json  scope_udp_height.json  scope_udp_height_control.json  scope_udp_sensors.json
simulation/: ahrs.m  attitude_controller.m  closed_loop_attitude.m  closed_loop_position.m  marg.m  mixer.m  plant_step.m  quad_model.m  serial_ahrs.m  visualize_3D.m
soft/: CMakeLists.txt  Makefile  README.md  env.sh  partitions.csv  sdkconfig  sdkconfig.old  setup.sh
soft/main/: CMakeLists.txt  MadgwickAHRS.c  MadgwickAHRS.h  component.mk  main.c  main.cpp  meson.build  platform.h  wifi_credentials.h
soft/main/app/: attitude_controller.cpp  attitude_controller.h  attitude_controller_conf.h
soft/main/app/controllers/: attitude_controller.cpp  attitude_controller.h  attitude_controller_conf.h  height_controller.cpp  height_controller.h  height_controller_conf.h  motors_controller.cpp  nmea_controller.cpp  nmea_controller.h  position_controller.cpp  rate_controller.cpp  rate_controller.h  rate_controller_conf.h
soft/main/app/data_recorder/: data_recorder.cpp  telemetry.cpp  telemetry.h
soft/main/app/observers/: euler_observer_conf.h  height_observer.cpp  height_observer.h  height_observer_conf.h
soft/main/app/workers/: battery_supervisor.cpp  battery_supervisor.h  broker.cpp  camera_controller.cpp  camera_controller.h  data_model_controller.cpp  data_recorder.cpp  heartbeat.cpp  heartbeat.h  radio_command.cpp  radio_command.h  telemetry.cpp
soft/main/data/: time-acc-baro.csv
soft/main/data_model/: data_model_json.h  data_ressource.cpp  data_ressource.h  data_ressources_registry.cpp  data_ressources_registry.h  json_protocol.cpp  json_protocol.h
soft/main/drv/: BMP180.cpp  BMP180.h  BMP180_defs.h  BMP280.cpp  BMP280.h  BMP280_conf.h  DShotRMT.cpp  HCSR04.cpp  HCSR04.h  HCSR04_defs.h  HMC5883L.cpp  HMC5883L.h  HMC5883L_conf.h  HMC5883L_defs.h  MPU6050.cpp  MPU6050.h  MPU6050_conf.h  MPU6050_defs.h  SI4432.cpp  SI4432.h  SI4432_conf.h  SI4432_defs.h
soft/main/hal/: barometer.cpp  barometer.h  battery.cpp  battery.h  bmp180_defs.h  gps.cpp  gps.h  hmc5883L_defs.h  imu.cpp  imu.h  led.cpp  led.h  log.cpp  log.h  marg.cpp  marg.h  mdns.cpp  motor.cpp  motor.h  mpu6050_defs.h  radio.cpp  radio.h  radio_command.cpp  radio_command.h  status.h  udp_server.cpp  udp_server.h  ultrasound.cpp  wifi.cpp  wifi.h  wifi_config.c
soft/main/os/: mutex.cpp  periodic_task.cpp  periodic_task.h  queue.cpp  queue.h  semaphore.cpp  task.cpp  task.h  tcp.cpp  udp.cpp  udp.h
soft/main/periph/: adc.cpp  adc.h  gpio.cpp  gpio.h  i2c_master.cpp  i2c_master.h  i2c_master_conf.h  i2c_master_defs.h  pulse.cpp  pulse.h  pulse_conf.h  spi.cpp  spi.h  timer.cpp  timer.h  uart.cpp  uart.h  uart_conf.h
soft/main/tests/: meson.build  test_ahrs.cpp  test_height.cpp
soft/main/tests/byte_array/: meson.build  test_byte_array.cpp
soft/main/tests/filters/: meson.build  test_slew.cpp
soft/main/tests/mock/app/hal/: log.h
soft/main/tests/mock/espressif/: esp_err.h  esp_spiffs.c  esp_spiffs.h
soft/main/tests/observers/: esp_log.h  meson.build  test_ahrs.cpp  test_height.cpp
soft/main/tests/registry/: meson.build  test_json.cpp  test_registry.cpp
soft/main/tests/registry/hal/: udp_server.cpp
soft/main/utils/: ahrs.h  attitude.cpp  attitude.h  byte_array.cpp  byte_array.h  controller.cpp  controller.h  crc16.cpp  crc16.h  csv_reader.cpp  csv_reader.h  filter.cpp  filter.h  height_observer.cpp  height_observer.h  height_observer_conf.h  json.hpp  kalman.cpp  madgwick.cpp  madgwick.h  madgwick_ahrs.cpp  madgwick_ahrs.h  matrix.cpp  matrix.h  mixer.cpp  mixer.h  nmea_parser.cpp  nmea_parser.h  pid.cpp  pid.h  quaternion.cpp  quaternion.h  string_utils.cpp  vector.cpp  vector.h
software/: README.md  env.sh  quadcopter.code-workspace  setup.sh
software/flight_controller/main/tests/registry/: meson.build  test_binary.cpp
software/radio_command/: cross_compile_linux.conf  cross_compile_mac.conf  gpio.hpp  i2c.cpp  i2c.hpp  main.cpp  meson.build  platform.hpp  spi.cpp  spi.hpp
software/radio_command/app/: battery_monitor.cpp  battery_monitor.hpp  radio_command.cpp  radio_command.hpp  video_feedback.cpp  video_feedback.hpp
software/radio_command/drv/: ADS1115.cpp  ADS1115.hpp  ADS1115_conf.hpp  ADS1115_defs.hpp  SI4432.cpp  SI4432.hpp  SI4432_defs.h
software/radio_command/hal/: battery.cpp  battery.hpp  button.cpp  button.hpp  framebuffer.cpp  framebuffer.hpp  radio.cpp  radio.hpp  stick.cpp  stick.hpp  video_capture.cpp  video_capture.hpp
software/radio_command/os/: task.cpp  task.hpp  tick.cpp
software/radio_command/periph/: adc.cpp  adc.hpp  gpio.cpp  i2c.cpp  i2c.hpp  spi.cpp  spi.hpp
software/radio_command/toolchain/sysroot/usr/include/: jconfig.h
software/radio_command/utils/: byte_array.cpp  crc16.cpp  crc16.hpp  jpeg_decoder.cpp  jpeg_decoder.hpp  pixmap.cpp  pixmap.hpp  state_machine.cpp  state_machine.hpp
tests/: plot_csv.py
tools/: requirements.txt  smart_audio.py  yi_action_cam.py
(+225 files in other folders)
