project('test_byte_array', 'cpp')

test_byte_array = executable('test_byte_array',
                             sources : ['../../utils/byte_array.cpp',
                                        'test_byte_array.cpp'],
                             include_directories : include_directories('.', '../../..'))